overflow-fixes

--- a/dist-webpack/css/style.css
+++ b/dist-webpack/css/style.css
@@ -26936,7 +26936,6 @@ div.ant-typography-edit-content.ant-typography-rtl {
 
 .rbs .resource-view {
   border: 1px solid #e9e9e9;
-  overflow: hidden;
 }
 
 .rbs .scheduler-view {
