--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,6 @@
 
 .rbs .resource-view {
   border: 1px solid #e9e9e9;
-  overflow: hidden;
 }
 
 .rbs .scheduler-view {
